# trc

./: Cargo.toml  README.md  output.json
.idx/: dev.nix
src/: main.rs
src/crates/: mod.rs
src/crates/aux/: mod.rs  safe_name.rs  search_json.rs
src/crates/parser/: mod.rs
src/crates/test/: mod.rs  parser.rs  searcher.rs
src/crates/test/aux/: mod.rs  search_json.rs
src/crates/test/json/: test.json  test2.json
src/crates/test/ts/: class.ts  const.ts  enum.ts  flow.ts  functions.ts  interface.ts  methods.ts  test.js  test.ts  types.ts
src/crates/test/ts/sizes/: small.ts
src/crates/tokens/: keys.rs  limits.rs
src/crates/types/: item.rs  mod.rs
src/crates/types/primitives/: bool.rs  mod.rs  number.rs  string.rs
