[package]
name = "trc"
version = "0.1.0"
edition = "2021"

[dependencies]
num-format = "0.4.4"
oxc_allocator = "=0.29.0"
oxc_ast = { version = "=0.29.0", features = ["serialize"] }
oxc_span = { version = "0.29.0", features = ["schemars", "serialize"] }
oxc_parser = "0.29.0"
pico-args = "0.5.0"
serde_json = "1.0.128"
